syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/dj-yacine-flutter/gojo/pb";

message RenewTokensRequest {
  string refreshToken = 1;
}

message RenewTokensResponse {
  string sessionID = 1;
  string accessToken = 2;
  google.protobuf.Timestamp accessTokenExpiresAt = 3;
  string refreshToken = 4;
  google.protobuf.Timestamp refreshTokenExpiresAt = 5;
}
